--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
-<html lang="en" >
+<html lang="en" data-theme="light" >
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/YhzRgpL/logo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Inter:wght@100..900&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Bistro Boss</title>
 </head>
 
 <body>
-  <div id="root" ></div>
+  <div id="root" class=""></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
